refactor(backend): update response conversion methods and enhance error handling in services